--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="play">Play</string>
     <string name="pause">Pause</string>
     <string name="close">Close</string>
+    <string name="storage">Storage</string>
+    <string name="storage_directory">Storage Directory</string>
+    <string name="root_directory">Root Directory</string>
+    <string name="tools">Tools</string>
 </resources>
