--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="storage_directory">Storage Directory</string>
     <string name="root_directory">Root Directory</string>
     <string name="tools">Tools</string>
+    <string name="regex">Regex</string>
+    <string name="case_sensitive">Case Sensitive</string>
+    <string name="word">Word</string>
 </resources>
