feat: Add support for mountable storage
This commit introduces a new feature that displays available storage spaces in the navigation drawer.

- Storage spaces are dynamically added to the drawer, including root, storage directory, and removable volumes.
- Clicking on a storage space opens a new tab in the file explorer for that location.
-
 Minor formatting adjustments are made to the size display.
- Error handling is improved when opening files.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="regex">Regex</string>
     <string name="case_sensitive">Case Sensitive</string>
     <string name="word">Word</string>
+    <string name="storage_space">Storage Space</string>
 </resources>
